# adventofcode

./: .gitignore  2015.html  2015.org  2016.html  2016.org  2017.html  2017.org  2018.html  2018.org  2019.html  2019.org  2020.html  2020.org  2021.html  2021.org  CNAME  Cargo.toml  README.html  README.org  advent_of_code_to_org.py  advent_of_code_to_org_split_day.py  aoc.nu  extractArticle.hi  extractArticle.hs  index.html
2015/day-01/: 2015-01.nu  2015-day-01.md
2015/day-02/: 2015-02.nu  2015-day-02.md
2015/day-03/: 2015-03.nu  2015-day-03.md
2015/day-04/: 2015-04.nu  2015-day-04.md
2015/day-05/: 2015-day-05.md
2015/day-06/: 2015-day-06.md
2015/day-07/: 2015-day-07.md
2015/day-08/: 2015-day-08.md
2015/day-09/: 2015-day-09.md
2015/day-11/: 2015-day-11.md
2015/day-12/: 2015-day-12.md
2015/day-13/: 2015-day-13.md
2015/day-14/: 2015-day-14.md
2015/day-15/: 2015-day-15.md
2015/day-16/: 2015-day-16.md
2016/: 2016.html
2016/day-10/: 2016-day-10.md
2016/day-11/: 2016-day-11.md
2016/day-12/: 2016-day-12.md
2016/day-13/: 2016-day-13.md
2016/day-14/: 2016-day-14.md
2016/day-15/: 2016-day-15.md
2016/day-16/: 2016-day-16.md
2018/: 2018.html  2018.org
2019/: 2019.org
2020/: 2020.html
2021/: 2021-16-1.rkt  2021-16-1.rkt~  Day3.html  day1.html  day1.org  day11.org  day13.org  day16.org  day2.html  day2.org  day3.org  day4.html  day4.org  day5.org  day6.html  day6.org  day7.html  day7.org  day8.org  day9.org
2022/: scratch.rkt
2023/: Cargo.toml  run-rust.sh
inputs/: input-2024-23.txt
libs/: index.html  libs.html  libs.org
(+335 files in other folders)
